// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`convertSignalInputsGenerator should convert properly 1`] = `
"
import { Component, Input, input } from '@angular/core';

@Component({
  
      template: \`
    <div>{{ inputWithoutType() }}</div>

<div [id]="normalInput()">{{ withoutDefault() }}</div>

@if (withoutDefaultUnion()) {
  <app-test [acceptsString]="withoutDefaultUnion()" />

  @if (withoutDefaultAlias()) {
    <app-test [acceptsString]="withoutDefaultAlias() || withoutDefaultUnion()" />
  }
}

<ng-container *ngIf="withDefaultAlias()">
  <app-test [acceptsString]="withDefaultAlias()" />

  <ng-container *ngIf="withoutDefaultAlias()">
    <app-test [acceptsString]="withoutDefaultAlias() || withDefaultAlias()" />
  </ng-container>
</ng-container>

<div>
  @for (item of normalInput(); track item.id) {
     <app-test [normalInput]="item.name" />
  }
</div>

<test [normalInput]="normalInput()" />
<test-normalInput />
<normalInput />
<another-component something="blah-normalInput" />

<a normalInput [routerLink]="['test-normalInput', '/normalInput' , normalInput(), 'normalInput']">
 normalInput - {{ normalInput() }}
 {{ normalInput() }}  normalInput
 {{ 'normalInput' }} - normalInput
 {{ normalInput() + 'normalInput' }} - normalInput
 <span>{{ 'normalInput' + normalInput() }}</span>
</a>

<button (click)="normalInput() = 123"></button>
<button (click)="normalInput() = 'normalInput'"></button>
<button (click)="someFunctionWithnormalInput('normalInput', normalInput())"></button>
<button (normalInput)="someFunctionWithnormalInput(normalInput(), 'normalInput')"></button>
<button (eventWithnormalInput)="test = 'normalInput' + normalInput()"></button>

<a>
 {{ 'someNormalTextnormalInput' | translate: 'normalInput' }}

 {{ normalInput() | translate: normalInput() }}
 {{ normalInput() | translate: 'normalInput' }}
 {{ 'normalInput' | translate: 'normalInput' }}
 {{ 'normalInput' | translate: normalInput() }}
</a>

<input [(ngModel)]="normalInput" />
<cmp name="normalInput"></cmp>
<cmp [name]="normalInput()"></cmp>
<cmp name="withnormalInput"></cmp>
<cmp normalInput="normalInput"></cmp>

<p>{{ data().normalInput }}</p>

  \`
})
export class MyCmp {
  inputWithoutType = input();
  normalInput = input('');
  withoutDefault = input<string>();
  withoutDefaultUnion = input<string>();
  withDefaultAlias = input(123, { alias: 'defaultAlias' });
  withoutDefaultAlias = input<number | undefined>(undefined, { alias: 'noDefaultAlias' });
  justAStringAlias = input('', { alias: 'stringAlias' });
  withTransform = input<boolean, boolean | string>(booleanAttribute(false), { transform: booleanAttribute });
  requiredInput = input.required<string>();
  requiredWithAlias = input.required<boolean>({ alias: 'requiredAlias' });
  requiredWithAliasAndTransform = input.required<number, number | string>({ alias: 'transformedRequiredAlias', transform: numberAttribute });
  withTransformWithoutType = input(booleanAttribute(false), { transform: booleanAttribute });
  requiredWithTransformWithoutType = input(numberAttribute(1), { transform: numberAttribute });

  @Input() set leaveMeAlone(value: number) {
    console.log('setter', value);
  }

  ngOnInit() {
    let imABoolean = false;
    console.log(this.justAStringAlias());

    if (this.withTransform()) {
      imABoolean = this.withTransform()!;
    }
  }

  handleClick() {
    if (this.requiredInput()) {
      let test = this.requiredInput()! + this.requiredWithAlias();
    } else {
      let test = this.requiredWithAliasAndTransform() + this.requiredWithAlias();
    }
  }
}
"
`;

exports[`convertSignalInputsGenerator should convert properly for issue #236 1`] = `
"import { input } from "@angular/core";

@Component({
  selector: 'app-request-info',
  templateUrl: './request-info.component.html',
  standalone: true,
  imports: [
    ReactiveFormsModule,
    MatFormFieldModule,
    MatIconModule,
    MatInputModule,
    MatButtonModule,
    AsyncPipe,
    NgIf,
  ],
})
export class RequestInfoComponent implements OnInit {
  #formBuilder = inject(NonNullableFormBuilder);
  #lookuper = inject(AddressLookuper);

  formGroup = this.#formBuilder.group({
    address: [''],
  });
  title = 'Request More Information';
  address = input('');
  submitter$ = new Subject<void>();
  lookupResult$: Observable<string> | undefined;

  ngOnInit(): void {
    if (this.address()) {
      this.formGroup.setValue({ address: this.address()! });
    }

    this.lookupResult$ = this.submitter$.pipe(
      switchMap(() => {
        assertDefined(this.formGroup.value.address);
        return this.#lookuper.lookup(this.formGroup.value.address);
      }),
      map((found) => (found ? 'Brochure sent' : 'Address not found')),
    );
  }

  search(): void {
    this.submitter$.next();
  }
}"
`;

exports[`convertSignalInputsGenerator should convert properly for issue #290 1`] = `
"
import { Component, input } from '@angular/core';

@Component({})
export class MyCmp {
  inputWithoutType = input();
  noColon = true
}
"
`;

exports[`convertSignalInputsGenerator should convert properly for issue #368Five 1`] = `
"
import { NgStyle } from '@angular/common';
import { Component, input } from '@angular/core';

@Component({
    selector: 'app-input-ex',
    
        template: \`
        <div [ngStyle]="{ height: height(), width: width() }"></div>
    \`,
    standalone: true,
    imports: [NgStyle]
})
export class InputComponent {
    height = input('100px');
    width = input('100px');
}
  "
`;

exports[`convertSignalInputsGenerator should convert properly for issue #368Four 1`] = `
"import { input } from "@angular/core";

@Component({})
export class InputComponent {
    desc = input<string | undefined>(undefined);
}
  "
`;

exports[`convertSignalInputsGenerator should convert properly for issue #368One 1`] = `
"import { input } from "@angular/core";

    @Component({
        selector: 'app-input-example',
        
                template: \`
            {{ label() }}
            @if (iconRight()) {
                <span>blah blah</span>
            }
        \`,
        standalone: true
    })
    export class InputComponent {
        label = input<string>();
        iconRight = input<string>();
    }
  "
`;

exports[`convertSignalInputsGenerator should convert properly for issue #368Six 1`] = `
"
import { NgStyle } from '@angular/common';
import { Component, input } from '@angular/core';

@Component({
    selector: 'app-input-ex',

    

        template: \`
        <span class="icon">
            <i class="{{ iconClass() }}">{{ icon() }}</i>
        </span>
    \`,
    standalone: true,
    imports: [NgStyle]
})
export class InputComponent {
    iconClass = input<string>('');
    icon = input<string>('');
}
  "
`;

exports[`convertSignalInputsGenerator should convert properly for issue #368Three 1`] = `
"
import { Component, input } from '@angular/core';
import { FormsModule } from '@angular/forms';

@Component({
    selector: 'app-input-ex',
    template: \`
        <input type="text" class="form-control" placeholder="Search" [(ngModel)]="search" />
    \`,
    standalone: true,
    imports: [FormsModule]
})
export class InputComponent {
    search = input.required<string>();
}
  "
`;

exports[`convertSignalInputsGenerator should convert properly for issue #368Two 1`] = `
"
    import { Component, input } from '@angular/core';

    @Component({
        selector: 'app-input-ex',
        
                template: \`
            <button>
                @if (sort() === 'asc') {
                    <span class="asc">
                        <i class="fa fa-sort-asc"></i>
                    </span>
                    {{ ascText() }}
                } @else {
                    <span class="desc">
                        <i class="fa fa-sort-desc"></i>
                    </span>
                    {{ descText() }}
                }
            </button>
        \`,
        standalone: true
    })
    export class InputComponent {
        sort = input<string>();
        ascText = input<string>();
        descText = input<string>();
    }
  "
`;

exports[`convertSignalInputsGenerator should convert properly for templateUrl 1`] = `
"
import { Component, Input, input } from '@angular/core';

@Component({
  templateUrl: './my-file.html'
})
export class MyCmp {
  inputWithoutType = input();
  normalInput = input('');
  withoutDefault = input<string>();
  withoutDefaultUnion = input<string>();
  withDefaultAlias = input(123, { alias: 'defaultAlias' });
  withoutDefaultAlias = input<number | undefined>(undefined, { alias: 'noDefaultAlias' });
  justAStringAlias = input('', { alias: 'stringAlias' });
  withTransform = input<boolean, boolean | string>(booleanAttribute(false), { transform: booleanAttribute });
  requiredInput = input.required<string>();
  requiredWithAlias = input.required<boolean>({ alias: 'requiredAlias' });
  /*
   * @description I go with requiredWithAliasAndTransform
   */
  requiredWithAliasAndTransform = input.required<number, number | string>({ alias: 'transformedRequiredAlias', transform: numberAttribute });
  withTransformWithoutType = input(booleanAttribute(false), { transform: booleanAttribute });
  requiredWithTransformWithoutType = input(numberAttribute(1), { transform: numberAttribute });

  @Input() set leaveMeAlone(value: number) {
    console.log('setter', value);
  }

  ngOnInit() {
    let imABoolean = false;
    console.log(this.justAStringAlias());

    if (this.withTransform()) {
      imABoolean = this.withTransform()!;
    }

    const ternary = this.withoutDefault() ? this.withoutDefault()!.toString() : null;
    const optional = this.withoutDefaultAlias()?.toString() || null;
  }

  handleClick() {
    if (this.requiredInput()) {
      let test = this.requiredInput()! + this.requiredWithAlias();
    } else {
      let test = this.requiredWithAliasAndTransform() + this.requiredWithAlias();
    }
  }
}
"
`;

exports[`convertSignalInputsGenerator should convert properly for templateUrl 2`] = `
"<div>{{ inputWithoutType() }}</div>

<div [id]="normalInput()">{{ withoutDefault() }}</div>

@if (withoutDefaultUnion()) {
  <app-test [acceptsString]="withoutDefaultUnion()" />

  @if (withoutDefaultAlias()) {
    <app-test [acceptsString]="withoutDefaultAlias() || withoutDefaultUnion()" />
  }
}

<ng-container *ngIf="withDefaultAlias()">
  <app-test [acceptsString]="withDefaultAlias()" />

  <ng-container *ngIf="withoutDefaultAlias()">
    <app-test [acceptsString]="withoutDefaultAlias() || withDefaultAlias()" />
  </ng-container>
</ng-container>

<div>
  @for (item of normalInput(); track item.id) {
     <app-test [normalInput]="item.name" />
  }
</div>

<test [normalInput]="normalInput()" />
<test-normalInput />
<normalInput />
<another-component something="blah-normalInput" />

<a normalInput [routerLink]="['test-normalInput', '/normalInput' , normalInput(), 'normalInput']">
 normalInput - {{ normalInput() }}
 {{ normalInput() }}  normalInput
 {{ 'normalInput' }} - normalInput
 {{ normalInput() + 'normalInput' }} - normalInput
 <span>{{ 'normalInput' + normalInput() }}</span>
</a>

<button (click)="normalInput() = 123"></button>
<button (click)="normalInput() = 'normalInput'"></button>
<button (click)="someFunctionWithnormalInput('normalInput', normalInput())"></button>
<button (normalInput)="someFunctionWithnormalInput(normalInput(), 'normalInput')"></button>
<button (eventWithnormalInput)="test = 'normalInput' + normalInput()"></button>

<a>
 {{ 'someNormalTextnormalInput' | translate: 'normalInput' }}

 {{ normalInput() | translate: normalInput() }}
 {{ normalInput() | translate: 'normalInput' }}
 {{ 'normalInput' | translate: 'normalInput' }}
 {{ 'normalInput' | translate: normalInput() }}
</a>

<input [(ngModel)]="normalInput" />
<cmp name="normalInput"></cmp>
<cmp [name]="normalInput()"></cmp>
<cmp name="withnormalInput"></cmp>
<cmp normalInput="normalInput"></cmp>

<p>{{ data().normalInput }}</p>
"
`;

exports[`convertSignalInputsGenerator should remove old import and append new one 1`] = `
"
import { Component, input } from '@angular/core';

@Component({})
export class MyCmp {
  hello = input<string>();
}
"
`;

exports[`convertSignalInputsGenerator should remove old import and append new one 2`] = `undefined`;
